Make sure checkboxes align correctly in toezicht forms

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -359,6 +359,25 @@ input[disabled] {
   display: inline-block;
 }
 
+/* temporary fix to make sure checkbox is aligned correctly */
+
+.form__row--checkbox {
+  display: flex;
+  flex-direction: row-reverse;
+
+  .form__input {
+    flex: 0;
+  }
+
+  .form__label {
+    flex: 1;
+  }
+
+  .checkbox {
+    margin-right: 0rem;
+  }
+}
+
 /* temporary fix for controle mandatenbeheer */
 
 .data-table input.ember-checkbox[type=checkbox] {
